...
  final FirebaseAuth auth = FirebaseAuth.instance;
  late User user;

  @override
  Widget build(BuildContext context) {
    return Scaffold(
      key: const ValueKey('Welcome bar'),
      appBar: AppBar(
        // backgroundColor: Colors.blue,
        elevation: 0,
        title: Align(
          alignment: const Alignment(0.00,0),
          child: Stack(
...
                                        color: Colors.white,
                                      ),
                                    ),
                                    const SizedBox(width: 10),
                                    const Expanded(
                                      child: Text(
                                        'Flashcard Tutor',
                                        style: TextStyle(
                                          color: Colors.white,
                                          fontSize: 34,
                                          fontWeight: FontWeight.w500,
                                        ),
                                        textAlign: TextAlign.center,
...
                                    context,
                                    MaterialPageRoute(
                                      builder: (context) => const UMS(),
                                    ),
                                  );
                                },
                                key: const ValueKey('Mark Scheme'),
                                child: Row(
                                  mainAxisAlignment: MainAxisAlignment.start,
                                  children: const [
                                    Icon(
                                      Icons.note_alt_outlined,
                                      color: Colors.white,
...
                                    Icon(
                                      Icons.settings,
                                      color: Colors.white,
                                    ),
                                    Expanded(
                                      child: Text(
                                        'Settings',
                                        style: TextStyle(
                                          color: Colors.white,
                                          fontSize: 34,
                                          fontWeight: FontWeight.w500,
                                        ),
                                        textAlign: TextAlign.center,
...
