...
    getUser();
  }

  @override
  Widget build(BuildContext context) {
    return AppScaffold(
        title: "User Details",
        body: Row(
          mainAxisAlignment: MainAxisAlignment.center,
          children: [
            Column(
              mainAxisAlignment: MainAxisAlignment.center,
              children: [
...
        const SizedBox(height: 10.0),
        Container(
          margin: const EdgeInsets.all(10),
          height: 50.0,
          width: 300,
          child: ElevatedButton(
            key: const ValueKey('Reset Userdata'),
            style: ElevatedButton.styleFrom(
              shape: RoundedRectangleBorder(
                  borderRadius: BorderRadius.circular(18.0),
                  side: const BorderSide(color: Color.fromRGBO(0, 160, 227, 1))),
              padding: const EdgeInsets.all(10.0),
              backgroundColor: Colors.white,
...
