...
            ),
            leading: Checkbox(
              side: const BorderSide(
                      color: Colors.black,
                      width: 1.5
                    ),
              key: i == 0 ? const ValueKey("Checkbox") : UniqueKey(),
              value: checked[map["topic"]],
              onChanged: (bool? value) {
                setState(() {
                  checked[map["topic"]] = value!;

                  for (var subtopic in map["subtopics"]) {
...
        children: [
          SizedBox(width: 60),
          Spacer(flex: 1),
          Expanded(
            flex: 1,
            child: Align(child: TextButton(
              key: const ValueKey("Revise"),
              style: TextButton.styleFrom(
                textStyle: const TextStyle(
                  fontSize: 20,
                ),
                shape: const RoundedRectangleBorder(
                    borderRadius: BorderRadius.all(Radius.circular(10))),
...
